--- a/history.txt
+++ b/history.txt
@@ -50,6 +50,10 @@ if the page needed it.  However, I felt maybe this is not what you are looking f
     I have no problem using generators for this as they do a good job.  The articles will have a 'has many' association
     with the comments as indicated by the json schema, so I will bear this in mind when creating the models.
 
+9. Now I can get data to/from the database, to be able to programatically create entities from test code, I prefer to use
+    factory girl, so I will add this to the gemfile.
+
+
 
 
 
